updated site styling

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kari Primiano - Data Scientist</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header id="header"></header>
-    <main id="main-content"></main>
+    <header>
+        <!-- Header content -->
+    </header>
+    <nav>
+        <!-- Navigation links -->
+    </nav>
+    <main>
+        <!-- Main content -->
+    </main>
+    <footer>
+        <!-- Footer content -->
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
